--- a/index.html
+++ b/index.html
@@ -63,18 +63,8 @@
       </div>
     </header>
 
-    <!-- About -->
-    <section id="about" class="about">
-      <div class="container text-center">
-        <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
-        <p class="lead">This theme features some wonderful photography courtesy of
-          <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a>.</p>
-      </div>
-      <!-- /.container -->
-    </section>
-
     <!-- Services -->
-    <section id="services" class="services bg-primary text-white">
+    <section id="services" class="services text-white">
       <div class="container">
         <div class="row text-center">
           <div class="col-lg-10 mx-auto">
@@ -85,7 +75,7 @@
                 <div class="service-item">
                   <span class="fa-stack fa-4x">
                     <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-cloud fa-stack-1x text-primary"></i>
+                    <i class="fa fa-cloud fa-stack-1x service-icon"></i>
                   </span>
                   <h4>
                     <strong>Service Name</strong>
@@ -98,7 +88,7 @@
                 <div class="service-item">
                   <span class="fa-stack fa-4x">
                     <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-compass fa-stack-1x text-primary"></i>
+                    <i class="fa fa-compass fa-stack-1x service-icon"></i>
                   </span>
                   <h4>
                     <strong>Service Name</strong>
@@ -111,7 +101,7 @@
                 <div class="service-item">
                   <span class="fa-stack fa-4x">
                     <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-flask fa-stack-1x text-primary"></i>
+                    <i class="fa fa-flask fa-stack-1x service-icon"></i>
                   </span>
                   <h4>
                     <strong>Service Name</strong>
@@ -124,7 +114,7 @@
                 <div class="service-item">
                   <span class="fa-stack fa-4x">
                     <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-shield fa-stack-1x text-primary"></i>
+                    <i class="fa fa-shield fa-stack-1x service-icon"></i>
                   </span>
                   <h4>
                     <strong>Service Name</strong>
@@ -146,7 +136,7 @@
     <!-- Callout -->
     <aside class="callout">
       <div class="text-vertical-center">
-        <h1>Vertically Centered Text</h1>
+          <h1>&lt;Responsive Web Design&gt;</h1>
       </div>
     </aside>
 
