--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
     <!-- Header -->
     <header class="header" id="top">
       <div class="text-vertical-center">
-        <h1>Hi, I'm Krzysztof</h1>
-        <h3>I'm loooking for inspirations to create someting special for You</h3>
+        <h1>Cześć, jestem Krzysztof.</h1>
+        <h3>Szukam inspiracji, by stworzyć coś specjalnego dla Ciebie.</h3>
         <br>
-        <a href="#about" class="btn btn-dark btn-lg js-scroll-trigger">More informations</a>
+        <a href="#about" class="btn btn-dark btn-lg js-scroll-trigger">Więcej info</a>
       </div>
     </header>
     
@@ -71,7 +71,7 @@
              <div class="row">
                  <div class="col-lg-10 mx-auto">
                     <div class="about-title">
-                        <h2 class="text-center">About me</h2>
+                        <h2 class="text-center">O mnie</h2>
                         <hr class="small">
                     </div>
                  </div>
@@ -84,12 +84,12 @@
                      <div class="col-xs-12 col-md-6">
                          <div class="about-text">
                              <h2>Krzysztof Figiel</h2>
-                             <h3>Web designer &#124; front-end developer</h3>
+                             <h3> Web designer &#124; front-end developer</h3>
                              <p class="lead">Pasjonuję się bieganiem oraz wędkarstwem, a od czasu studiów moim nowym hobby stał się szeroko rozumiany Web Development ze szczególnym nastawieniem na front-end, dlatego też dążę wszelkimi możliwymi drogami do zdobycia doświadczenia w tym kierunku i bycia na bieżąco z najnowszymi trendami. W wolnych chwilach zajmuję się tworzeniem i edytowaniem grafiki wektorowej, czy obróbką cyfrową zdjęć. Jestem osobą kreatywną nieco inaczej patrzącą na otaczający mnie świat. Moim atutem jest umiejetność przelewania świata rzeczywistego na papier za pomocą ołówka i kartki papieru. Myślę, że zestawiając te wszystkie umiejętności ze sobą mógłbym doskonale spełniać się w procesie tworzenia nowoczesnych stron internetowych. 
                              </p>
                              <div class="about-bottom-row">
-                                 <a class="btn btn-primary" href="#services">
-                                     <i class="fa fa-play-circle-o" aria-hidden="true"></i>
+                                 <a class="btn btn-about" href="#services">
+                                     <i class="fa fa-question-circle" aria-hidden="true"></i>
                                      <span>Zobacz wiecej</span>
                                  </a>
                              </div>
@@ -106,19 +106,19 @@
       <div class="container">
         <div class="row text-center">
           <div class="col-lg-10 mx-auto">
-            <h2>Services</h2>
+            <h2>Co oferuję?</h2>
             <hr class="small">
               <div class="row js--wp-1">
                   <div class="col-md-3 col-sm-6">
                     <div class="service-item">
                       <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x"></i>
-                        <i class="fa fa-cloud fa-stack-1x service-icon"></i>
+                        <i class="fa fa-handshake-o fa-stack-1x service-icon"></i>
                       </span>
                       <h4>
-                        <strong>Service Name</strong>
+                        <strong>Kolaboracja</strong>
                       </h4>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                      <p>Współpracuję z klientami w taki sposób, aby uzyskać maksymalny, pożądany efekt. Nie boję się kontaktu z ludźmi. Klientów stawiam na pierwszym miejscu.</p>
                       <a href="#" class="btn btn-light">Learn More</a>
                     </div>
                   </div>
@@ -126,12 +126,12 @@
                     <div class="service-item">
                       <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x"></i>
-                        <i class="fa fa-compass fa-stack-1x service-icon"></i>
+                        <i class="fa fa-pencil fa-stack-1x service-icon"></i>
                       </span>
                       <h4>
-                        <strong>Service Name</strong>
+                        <strong>UX | UI</strong>
                       </h4>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                      <p>Każdy mój projekt początkowo ląduje na kartce. Projektuję proste i intuicyjne interfejsy, bo wierzę, że minimalizm to przyszłościowa rzecz.</p>
                       <a href="#" class="btn btn-light">Learn More</a>
                     </div>
                   </div>
@@ -139,12 +139,12 @@
                     <div class="service-item">
                       <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x"></i>
-                        <i class="fa fa-flask fa-stack-1x service-icon"></i>
+                        <i class="fa fa-code fa-stack-1x service-icon"></i>
                       </span>
                       <h4>
-                        <strong>Service Name</strong>
+                        <strong>Kod</strong>
                       </h4>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                      <p>Kocham programować strony od podstaw w czystym HTML, CSS z nutką JavaScript. Nie oznacza to, że nie potrafię używać takich framework'ów jak Bootstrap.</p>
                       <a href="#" class="btn btn-light">Learn More</a>
                     </div>
                   </div>
@@ -152,12 +152,12 @@
                     <div class="service-item">
                       <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x"></i>
-                        <i class="fa fa-shield fa-stack-1x service-icon"></i>
+                        <i class="fa fa-leanpub fa-stack-1x service-icon"></i>
                       </span>
                       <h4>
-                        <strong>Service Name</strong>
+                        <strong>Wiedza</strong>
                       </h4>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                      <p>Zdobywanie wiedzy poprzez praktykę stawiam na pierwszym miejscu, dlatego też jestem otwarty na wszelkie propozycje stażu/pracy.</p>
                       <a href="#" class="btn btn-light">Learn More</a>
                     </div>
                   </div>
