portfolio images changes

--- a/index.html
+++ b/index.html
@@ -189,14 +189,14 @@
               <div class="col-md-6">
                 <div class="portfolio-item">
                     <a href="https://github.com/krzysztoffigiel/DiaLog---Online-Diabetic-Register" target="_blank">
-                    <img class="img-portfolio img-fluid img-thumbnail" src="img/portfolio-1.jpg" alt="DiaLog online diabetic register">
+                    <img class="img-portfolio img-fluid img-thumbnail" src="img/portfolio-img-1.jpg" alt="DiaLog online diabetic register">
                   </a>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="portfolio-item">
                   <a href="#">
-                    <img class="img-portfolio img-fluid" src="img/portfolio-2.jpg" alt="PPHU Jacek Surdyk skup złomu">
+                    <img class="img-portfolio img-fluid" src="img/portfolio-img-2.jpg" alt="PPHU Jacek Surdyk skup złomu">
                   </a>
                 </div>
               </div>
