--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <body>
     <!-- Navigation -->
-    <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle">
+    <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle menu-toggle">
       <i class="fa fa-bars"></i>
     </a>
     <nav id="sidebar-wrapper">
@@ -35,22 +35,22 @@
           <i class="fa fa-times"></i>
         </a>
         <li class="sidebar-brand">
-          <a class="js-scroll-trigger" href="#top">Start Bootstrap</a>
+          <a class="js-scroll-trigger menu-item" href="#top">Menu</a>
         </li>
         <li>
-          <a class="js-scroll-trigger" href="#top">Home</a>
+            <a class="js-scroll-trigger menu-item" href="#top">Start</a>
         </li>
         <li>
-          <a class="js-scroll-trigger" href="#about">About</a>
+            <a class="js-scroll-trigger menu-item" href="#about">O mnie</a>
         </li>
         <li>
-          <a class="js-scroll-trigger" href="#services">Services</a>
+            <a class="js-scroll-trigger menu-item" href="#services">Co oferuję</a>
         </li>
         <li>
-          <a class="js-scroll-trigger" href="#portfolio">Portfolio</a>
+            <a class="js-scroll-trigger menu-item" href="#portfolio">Portfolio</a>
         </li>
         <li>
-          <a class="js-scroll-trigger" href="#contact" onclick=$( "#menu-close").click();>Contact</a>
+            <a class="js-scroll-trigger menu-item" href="#contact" onclick=$( "#menu-close").click();>Kontakt</a>
         </li>
       </ul>
     </nav>
@@ -119,7 +119,7 @@
                         <strong>Kolaboracja</strong>
                       </h4>
                       <p>Współpracuję z klientami w taki sposób, aby uzyskać maksymalny, pożądany efekt. Nie boję się kontaktu z ludźmi. Klientów stawiam na pierwszym miejscu.</p>
-                      <a href="#" class="btn btn-light">Learn More</a>
+                      <!--<a href="#" class="btn btn-light">Learn More</a>-->
                     </div>
                   </div>
                   <div class="col-md-3 col-sm-6">
@@ -132,7 +132,7 @@
                         <strong>UX | UI</strong>
                       </h4>
                       <p>Każdy mój projekt początkowo ląduje na kartce. Projektuję proste i intuicyjne interfejsy, bo wierzę, że minimalizm to przyszłościowa rzecz.</p>
-                      <a href="#" class="btn btn-light">Learn More</a>
+                      <!--<a href="#" class="btn btn-light">Learn More</a>-->
                     </div>
                   </div>
                   <div class="col-md-3 col-sm-6">
@@ -145,7 +145,7 @@
                         <strong>Kod</strong>
                       </h4>
                       <p>Kocham programować strony od podstaw w czystym HTML, CSS z nutką JavaScript. Nie oznacza to, że nie potrafię używać takich framework'ów jak Bootstrap.</p>
-                      <a href="#" class="btn btn-light">Learn More</a>
+                      <!--<a href="#" class="btn btn-light">Learn More</a>-->
                     </div>
                   </div>
                   <div class="col-md-3 col-sm-6">
@@ -158,7 +158,7 @@
                         <strong>Wiedza</strong>
                       </h4>
                       <p>Zdobywanie wiedzy poprzez praktykę stawiam na pierwszym miejscu, dlatego też jestem otwarty na wszelkie propozycje stażu/pracy.</p>
-                      <a href="#" class="btn btn-light">Learn More</a>
+                      <!--<a href="#" class="btn btn-light">Learn More</a>-->
                     </div>
                   </div>
             </div>
@@ -174,7 +174,7 @@
     <!-- Callout -->
     <aside class="callout">
       <div class="text-vertical-center">
-          <h1>&lt;Responsive Web Design&gt;</h1>
+          <h1 class="js--wp-3">&lt;Responsive Web Design&gt;</h1>
       </div>
     </aside>
 
@@ -202,7 +202,7 @@
               </div>
             </div>
             <!-- /.row (nested) -->
-            <a href="#" class="btn btn-dark">View More Items</a>
+            <!--<a href="#" class="btn btn-dark">View More Items</a>-->
           </div>
           <!-- /.col-lg-10 -->
         </div>
