social icons hrefs

--- a/index.html
+++ b/index.html
@@ -235,13 +235,13 @@
                 (+48)660-489-997</li>
               <li>
                 <i class="fa fa-envelope-o fa-fw"></i>
-                <a href="mailto:name@example.com">kfigiel.projekty@gmail.com</a>
+                <a href="mailto:kfigiel.projekty@gmail.com">kfigiel.projekty@gmail.com</a>
               </li>
             </ul>
             <br>
             <ul class="list-inline social-list">
               <li class="list-inline-item">
-                <a href="#">
+                  <a href="https://www.facebook.com/krzychutriathlon" target="_blank">
                   <i class="fa fa-facebook fa-fw fa-3x"></i>
                 </a>
               </li>
@@ -251,7 +251,7 @@
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#">
+                <a href="http://www.thepicta.com/user/eatsleeptri/1723381829" target="_blank">
                   <i class="fa fa-instagram fa-fw fa-3x"></i>
                 </a>
               </li>
