profile photo change 2

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                  <div class="row">   
                      <div class="col-xs-12 col-md-6">
                              <figure class="about-photo">
-                                 <img src="img/profile.jpg" alt="Krzysztof Figiel zdjęcie" class="img-responsive img-thumbnail js--wp-2">
+                                 <img src="img/profile2.jpg" alt="Krzysztof Figiel zdjęcie" class="img-responsive img-thumbnail js--wp-2">
                              </figure>
                      </div>
                      <div class="col-xs-12 col-md-6">
