--- a/index.html
+++ b/index.html
@@ -202,66 +202,57 @@
           </div>
         </div>
 
-        <div class="skillbar clearfix " data-percent="20%">
+        <div class="skillbar clearfix " data-percent="80%">
           <div class="skillbar-title" style="background: #d35400;">
             <span>HTML5</span>
           </div>
           <div class="skillbar-bar" style="background: #e67e22;"></div>
-          <div class="skill-bar-percent">20%</div>
+          <div class="skill-bar-percent">80%</div>
         </div>
         <!-- End Skill Bar -->
 
-        <div class="skillbar clearfix " data-percent="25%">
+        <div class="skillbar clearfix " data-percent="65%">
           <div class="skillbar-title" style="background: #2980b9;">
             <span>CSS3</span>
           </div>
           <div class="skillbar-bar" style="background: #3498db;"></div>
-          <div class="skill-bar-percent">25%</div>
+          <div class="skill-bar-percent">65%</div>
         </div>
         <!-- End Skill Bar -->
 
-        <div class="skillbar clearfix " data-percent="50%">
-          <div class="skillbar-title" style="background: #2c3e50;">
-            <span>jQuery</span>
+        <div class="skillbar clearfix " data-percent="60%">
+          <div class="skillbar-title" style="background: #b52e31;">
+            <span>Angular</span>
           </div>
-          <div class="skillbar-bar" style="background: #2c3e50;"></div>
-          <div class="skill-bar-percent">50%</div>
+          <div class="skillbar-bar" style="background: #b52e31;"></div>
+          <div class="skill-bar-percent">60%</div>
         </div>
         <!-- End Skill Bar -->
 
         <div class="skillbar clearfix " data-percent="40%">
-          <div class="skillbar-title" style="background: #46465e;">
-            <span>PHP</span>
+          <div class="skillbar-title" style="background: #2E89FE;">
+            <span>Ionic</span>
           </div>
-          <div class="skillbar-bar" style="background: #5a68a5;"></div>
-          <div class="skill-bar-percent">40%</div>
+          <div class="skillbar-bar" style="background: #2E89FE;"></div>
+          <div class="skill-bar-percent">60%</div>
         </div>
         <!-- End Skill Bar -->
 
-        <div class="skillbar clearfix " data-percent="75%">
-          <div class="skillbar-title" style="background: #333333;">
-            <span>Wordpress</span>
+        <div class="skillbar clearfix " data-percent="55%">
+          <div class="skillbar-title" style="background: #294F80;">
+            <span>TypeScript</span>
           </div>
-          <div class="skillbar-bar" style="background: #525252;"></div>
-          <div class="skill-bar-percent">75%</div>
+          <div class="skillbar-bar" style="background: #294F80;"></div>
+          <div class="skill-bar-percent">55%</div>
         </div>
         <!-- End Skill Bar -->
 
-        <div class="skillbar clearfix " data-percent="100%">
-          <div class="skillbar-title" style="background: #27ae60;">
-            <span>SEO</span>
-          </div>
-          <div class="skillbar-bar" style="background: #2ecc71;"></div>
-          <div class="skill-bar-percent">100%</div>
-        </div>
-        <!-- End Skill Bar -->
-
-        <div class="skillbar clearfix " data-percent="70%">
+        <div class="skillbar clearfix " data-percent="50%">
           <div class="skillbar-title" style="background: #124e8c;">
             <span>Photoshop</span>
           </div>
           <div class="skillbar-bar" style="background: #4288d0;"></div>
-          <div class="skill-bar-percent">70%</div>
+          <div class="skill-bar-percent">50%</div>
         </div>
         <!-- End Skill Bar -->
       </div>
