add logo to footer

--- a/index.html
+++ b/index.html
@@ -319,6 +319,9 @@
               <i class="fa fa-envelope-o fa-fw"></i>
               <a href="mailto:kfigiel.projekty@gmail.com">kfigiel.projekty@gmail.com</a>
             </li>
+            <li>
+              <img class="logo" src="/img/new_logo_signs.png" alt="KF Devsigns logo">
+            </li>
           </ul>
           <br>
           <ul class="list-inline social-list">
