--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <div class="col-xs-12 col-md-6">
             <div class="about-text">
               <h2>Krzysztof Figiel</h2>
-              <h3> Web designer &#124; front-end developer</h3>
+              <h3>Inżynier informatyk, student Politechniki Poznańskiej Web &#124; designer &#124; front-end developer</h3>
               <p class="lead">Pasjonuję się bieganiem oraz wędkarstwem, a od czasu studiów moim nowym hobby stał się szeroko rozumiany Web
                 Development ze szczególnym nastawieniem na front-end, dlatego też dążę wszelkimi możliwymi drogami do zdobycia
                 doświadczenia w tym kierunku i bycia na bieżąco z najnowszymi trendami. W wolnych chwilach zajmuję się tworzeniem
@@ -220,30 +220,30 @@
         </div>
         <!-- End Skill Bar -->
 
-        <div class="skillbar clearfix " data-percent="60%">
+        <div class="skillbar clearfix " data-percent="75%">
           <div class="skillbar-title" style="background: #b52e31;">
             <span>Angular</span>
           </div>
           <div class="skillbar-bar" style="background: #b52e31;"></div>
-          <div class="skill-bar-percent">60%</div>
+          <div class="skill-bar-percent">75%</div>
         </div>
         <!-- End Skill Bar -->
 
-        <div class="skillbar clearfix " data-percent="40%">
+        <div class="skillbar clearfix " data-percent="80%">
           <div class="skillbar-title" style="background: #2E89FE;">
             <span>Ionic</span>
           </div>
           <div class="skillbar-bar" style="background: #2E89FE;"></div>
-          <div class="skill-bar-percent">40%</div>
+          <div class="skill-bar-percent">80%</div>
         </div>
         <!-- End Skill Bar -->
 
-        <div class="skillbar clearfix " data-percent="55%">
+        <div class="skillbar clearfix " data-percent="70%">
           <div class="skillbar-title" style="background: #294F80;">
             <span>TypeScript</span>
           </div>
           <div class="skillbar-bar" style="background: #294F80;"></div>
-          <div class="skill-bar-percent">55%</div>
+          <div class="skill-bar-percent">70%</div>
         </div>
         <!-- End Skill Bar -->
 
