--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <div class="col-xs-12 col-md-6">
             <div class="about-text">
               <h2>Krzysztof Figiel</h2>
-              <h3>Inżynier informatyk, student Politechniki Poznańskiej Web &#124; designer &#124; front-end developer</h3>
+              <h3>Inżynier informatyk, student Politechniki Poznańskiej &#124; Web designer &#124; front-end developer</h3>
               <p class="lead">Pasjonuję się bieganiem oraz wędkarstwem, a od czasu studiów moim nowym hobby stał się szeroko rozumiany Web
                 Development ze szczególnym nastawieniem na front-end, dlatego też dążę wszelkimi możliwymi drogami do zdobycia
                 doświadczenia w tym kierunku i bycia na bieżąco z najnowszymi trendami. W wolnych chwilach zajmuję się tworzeniem
